[gd_scene load_steps=3 format=3 uid="uid://xituhhu1ekqb"]

[ext_resource type="Texture2D" uid="uid://cwfqlwrvo7264" path="res://assets/mainmenu.png" id="1_8nqar"]
[ext_resource type="Script" path="res://src/MainMenu.gd" id="1_v5dyx"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v5dyx")

[node name="Background" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(257, 126)
texture = ExtResource("1_8nqar")

[node name="MainMenu" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="MainMenu"]
texture_filter = 1
layout_mode = 2
text = "Pong!
But in Godot!"
horizontal_alignment = 1

[node name="Play" type="Button" parent="MainMenu"]
layout_mode = 2
text = "Play"

[node name="Options" type="Button" parent="MainMenu"]
visible = false
layout_mode = 2
text = "Options"

[node name="Quit" type="Button" parent="MainMenu"]
layout_mode = 2
text = "Quit"

[node name="Button4" type="Button" parent="MainMenu"]
visible = false
layout_mode = 2

[node name="Button5" type="Button" parent="MainMenu"]
visible = false
layout_mode = 2

[node name="PlayMenu" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -65.0
offset_top = -48.0
offset_right = 65.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="PlayMenu"]
layout_mode = 2
text = "New Match"
horizontal_alignment = 1

[node name="PlayerVsPlayer" type="Button" parent="PlayMenu"]
layout_mode = 2
text = "Player vs Player"

[node name="PlayerVsComputer" type="Button" parent="PlayMenu"]
layout_mode = 2
text = "Player vs AI"

[node name="Back" type="Button" parent="PlayMenu"]
layout_mode = 2
text = "Back"

[node name="OptionsMenu" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="button_down" from="MainMenu/Play" to="." method="_on_play_button_down"]
[connection signal="button_down" from="MainMenu/Options" to="." method="_on_options_button_down"]
[connection signal="button_down" from="MainMenu/Quit" to="." method="_on_quit_button_down"]
[connection signal="button_down" from="PlayMenu/PlayerVsPlayer" to="." method="_on_player_vs_player_button_down"]
[connection signal="button_down" from="PlayMenu/PlayerVsComputer" to="." method="_on_player_vs_computer_button_down"]
[connection signal="button_down" from="PlayMenu/Back" to="." method="_on_back_button_down"]
